--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interactive-iran-map",
-  "version": "0.1.9",
+  "version": "0.1.10",
   "private": false,
   "license": "MIT",
   "repository": {
@@ -55,5 +55,9 @@
     "prettier": "2.0.1",
     "eslint": "^6.7.2",
     "eslint-plugin-import": "^2.19.1"
+  },
+  "directories": {
+    "lib": "lib",
+    "test": "test"
   }
 }
